--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
         <button type="submit" class="search-button">Search</button>
       </form>
       <div class="gallery"></div>
+      <button class="load-more-button">Load more</button>
       <div class="loader"></div>
     </section>
 
